[package]
name = "solana-bpf-helloworld"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
solana-program = "=1.7.3"
arrayref = "0.3.6"
thiserror="1.0.25"
num-derive = "0.3"
num-traits = "0.2"

[dev-dependencies]
solana-program-test = "=1.7.3"
solana-sdk = "=1.7.3"
thiserror = "1.0"
num-traits = "0.2"
num-derive = "0.3"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
